# src/resources/OpenBanking/controllers/OpenBanking.controller.ts
@@ -18,7 +18,7 @@ export class OpenBankingController {
   async getNaturalPersonIdentification(request: Request, response: Response) {
     const createConectionOpenBanking = new CreateConectionOpenBanking();
     const responseConection = await createConectionOpenBanking.execute();
-    const cpf = request.query.cpfNumber
+    const cpf = request.query.cpfNumber;
     const query = `
     SELECT * 
     FROM 
@@ -39,18 +39,17 @@ export class OpenBankingController {
       ON em.personalid = pid.personalid
   WHERE
     pd.cpfnumber = '${cpf}'`;
-    const rsp = await responseConection.query(query)
-    responseConection.close()
+    const rsp = await responseConection.query(query);
+    responseConection.close();
     return response.json({
       message: rsp[0],
     });
   }
 
-
   async getBusinessPersonIdentification(request: Request, response: Response) {
     const createConectionOpenBanking = new CreateConectionOpenBanking();
     const responseConection = await createConectionOpenBanking.execute();
-    const cnpj = request.query.cnpjNumber
+    const cnpj = request.query.cnpjNumber;
     const query = `SELECT 
                         * 
                    FROM 
@@ -68,18 +67,17 @@ export class OpenBankingController {
                   WHERE
                     bid.cnpjnumber = '${cnpj}'
       `;
-      const rsp = await responseConection.query(query);
-      responseConection.close()
+    const rsp = await responseConection.query(query);
+    responseConection.close();
     return response.json({
       message: rsp[0],
     });
   }
 
-
   async getNaturalPersonQualification(request: Request, response: Response) {
     const createConectionOpenBanking = new CreateConectionOpenBanking();
     const responseConection = await createConectionOpenBanking.execute();
-    const cpf = request.query.cpfNumber
+    const cpf = request.query.cpfNumber;
     const query = `SELECT 
                         * 
                    FROM 
@@ -89,8 +87,8 @@ export class OpenBankingController {
                    WHERE
                      pd.cpfnumber = '${cpf}'
       `;
-      const rsp = await responseConection.query(query);
-      responseConection.close()
+    const rsp = await responseConection.query(query);
+    responseConection.close();
     return response.json({
       message: rsp[0],
     });
@@ -99,7 +97,7 @@ export class OpenBankingController {
   async getBusinessPersonQualification(request: Request, response: Response) {
     const createConectionOpenBanking = new CreateConectionOpenBanking();
     const responseConection = await createConectionOpenBanking.execute();
-    const cnpj = request.query.cnpjNumber
+    const cnpj = request.query.cnpjNumber;
     const query = `SELECT 
                         * 
                    FROM 
@@ -109,8 +107,8 @@ export class OpenBankingController {
                    WHERE
                      bid.cnpjnumber = '${cnpj}'
       `;
-      const rsp= await responseConection.query(query);
-      responseConection.close()
+    const rsp = await responseConection.query(query);
+    responseConection.close();
     return response.json({
       message: rsp[0],
     });
@@ -119,7 +117,7 @@ export class OpenBankingController {
   async getNaturalPersonFinancial(request: Request, response: Response) {
     const createConectionOpenBanking = new CreateConectionOpenBanking();
     const responseConection = await createConectionOpenBanking.execute();
-    const cpf = request['body']['cpfNumber']
+    const cpf = request.body.cpfNumber;
     const query = `SELECT 
                         * 
                    FROM 
@@ -131,8 +129,8 @@ export class OpenBankingController {
                    WHERE
                     bid.cpfnumber = '${cpf}'
       `;
-      const rsp = await responseConection.query(query);
-      responseConection.close()
+    const rsp = await responseConection.query(query);
+    responseConection.close();
     return response.json({
       message: rsp[0],
     });
@@ -141,7 +139,7 @@ export class OpenBankingController {
   async getNaturalBusinessFinancial(request: Request, response: Response) {
     const createConectionOpenBanking = new CreateConectionOpenBanking();
     const responseConection = await createConectionOpenBanking.execute();
-    const cnpj = request.query.cnpjNumber
+    const cnpj = request.query.cnpjNumber;
     const query = `SELECT 
                         * 
                    FROM 
@@ -153,8 +151,8 @@ export class OpenBankingController {
                    WHERE
                      pd.cnpjNumber = '${cnpj}'
       `;
-      const rsp = await responseConection.query(query);
-      responseConection.close()
+    const rsp = await responseConection.query(query);
+    responseConection.close();
     return response.json({
       message: rsp[0],
     });
